add auth for qr code and fix pull payment doc
