# src/swagger.yml
@@ -140,10 +140,10 @@ paths:
           application/json:
             schema:
               type: object
-              $ref: '#/components/schemas/PullPaymentModelNoMerchantRequest'
+              $ref: '#/components/schemas/PullPaymentModelNoMerchant'
       responses:
         '200':
-          description: Returns the updated pull payment model by ID
+          description: Returns the pull payment model by ID
           content:
             application/json:
               schema:
@@ -168,7 +168,7 @@ paths:
     patch:
       tags:
         - Pull Payment Models
-      summary: 'Updates the pull payment models by pull payment model ID - with optional fields'
+      summary: 'Updates the pull payment models by pull payment model ID'
       parameters:
         - in: path
           name: PullPaymentModelID
@@ -177,13 +177,6 @@ paths:
           required: true
           description: ID of the pull payment model to update
       description: 'Updates the pull payment models by ID that exists in the merchant database'
-      requestBody:
-        required: false
-        content:
-          application/json:
-            schema:
-              type: object
-              $ref: '#/components/schemas/PullPaymentModelNoMerchantRequest'
       responses:
         '200':
           description: Returns the pull payment model by ID
@@ -561,6 +554,8 @@ paths:
     get:
       tags:
         - QR Payload
+      security:
+        - TokenAuth: []
       summary: 'Returns the QR payload that needs to be injected in the UI'
       parameters:
         - in: path
@@ -654,7 +649,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorHttpResponse'
 components:
-  schemas:
+ securitySchemes:
+    TokenAuth:
+      type: apiKey
+      in: header
+      name: fcm-mobile-token
+ schemas:
     SuccessHttpResponse:
       required:
         - code
@@ -802,84 +802,6 @@ components:
           example: 4a17335e-bf18-11e8-a355-000000fb1459
           format: uuid
           description: ID provided to the merchant by PumaPay
-        title:
-          type: string
-          format: text
-          example: National Cryptographic Gold Mebmership
-          description: Title of the  payment model
-        description:
-          type: string
-          format: text
-          example: Access to all gold articles
-          description: Description of the  payment model
-        amount:
-          type: integer
-          example: 1099
-          format: cents
-          description: Cost of the payment in cents (1099 => 10.99)
-        initialPaymentAmount:
-          type: integer
-          example: 199
-          format: cents
-          description: Cost of the payment in cents (199 => 1.99) - Set to zero if no intial fees are required for the payment
-        trialPeriod:
-          type: integer
-          format: seconds
-          example: 86400
-          description: Trial period for the subscription in seconds (86400 => 1 day) - Set to zero if the payment has no trial period
-        currency:
-          type: string
-          example: USD
-          format: text
-          description: Currency the merchant is using specified in 3-letter abbriviation - USD, EUR, GBP etc
-        numberOfPayments:
-          type: integer
-          example: 12
-          format: integer
-          description: Number of payments that the merchant will be allowed to pull from the customer's wallet
-        typeID:
-          type: integer
-          enum: [push = 1, singlePull = 2, recurringPull = 3, recurringWithInitial = 4, recurringWithTrial = 5, recurringWithTrialAndInitial = 6]
-          example: 2
-          format: integer
-          description: Payment Type ID
-        frequency:
-          type: integer
-          example: 604800
-          format: seconds
-          description: How often the merchant will be able to pull funds from the customer's wallet (604800 => 1 week)
-        networkID:
-          type: integer
-          example: 3
-          format: integer
-          enum: [MainNet = 1, TestNet (Ropsten) = 3]
-          description: Ethereum network ID
-        automatedCashOut:
-          type: boolean
-          example: true
-          format: boolean
-          description: True if cash out is autometed, false if not
-        cashOutFrequency:
-          type: integer
-          example: 1
-          format: seconds
-          description: The cash out frequency
-    PullPaymentModelNoMerchantRequest:
-      type: object
-      required:
-        - title
-        - description
-        - amount
-        - initialPaymentAmount
-        - trialPeriod
-        - currency
-        - numberOfPayments
-        - typeID
-        - frequency
-        - networkID
-        - automatedCashOut
-        - cashOutFrequency
-      properties:
         title:
           type: string
           format: text
@@ -1150,4 +1072,164 @@ components:
           type: string
         transactionURL:
           type: string
-    
+    PullPaymentModelNoMerchant:
+      type: object
+      required:
+        - title
+        - description
+        - amount
+        - initialPaymentAmount
+        - trialPeriod
+        - currency
+        - numberOfPayments
+        - typeID
+        - frequency
+        - networkID
+        - automatedCashOut
+        - cashOutFrequency
+      properties:
+        title:
+          type: string
+          format: text
+          example: National Cryptographic Gold Mebmership
+          description: Title of the  payment model
+        description:
+          type: string
+          format: text
+          example: Access to all gold articles
+          description: Description of the  payment model
+        amount:
+          type: integer
+          example: 1099
+          format: cents
+          description: Cost of the payment in cents (1099 => 10.99)
+        initialPaymentAmount:
+          type: integer
+          example: 199
+          format: cents
+          description: Cost of the payment in cents (199 => 1.99) - Set to zero if no intial fees are required for the payment
+        trialPeriod:
+          type: integer
+          format: seconds
+          example: 86400
+          description: Trial period for the subscription in seconds (86400 => 1 day) - Set to zero if the payment has no trial period
+        currency:
+          type: string
+          example: USD
+          format: text
+          description: Currency the merchant is using specified in 3-letter abbriviation - USD, EUR, GBP etc
+        numberOfPayments:
+          type: integer
+          example: 12
+          format: integer
+          description: Number of payments that the merchant will be allowed to pull from the customer's wallet
+        typeID:
+          type: integer
+          enum: [push = 1, singlePull = 2, recurringPull = 3, recurringWithInitial = 4, recurringWithTrial = 5, recurringWithTrialAndInitial = 6]
+          example: 2
+          format: integer
+          description: Payment Type ID
+        frequency:
+          type: integer
+          example: 604800
+          format: seconds
+          description: How often the merchant will be able to pull funds from the customer's wallet (604800 => 1 week)
+        networkID:
+          type: integer
+          example: 3
+          format: integer
+          enum: [MainNet = 1, TestNet (Ropsten) = 3]
+          description: Ethereum network ID
+        automatedCashOut:
+          type: boolean
+          example: true
+          format: boolean
+          description: True if cash out is autometed, false if not
+        cashOutFrequency:
+          type: integer
+          example: 1
+          format: seconds
+          description: The cash out frequency
+    PullPaymentModelNoMerchantRequest:
+      type: object
+      required:
+        - title
+        - description
+        - amount
+        - initialPaymentAmount
+        - trialPeriod
+        - currency
+        - numberOfPayments
+        - typeID
+        - frequency
+        - networkID
+        - automatedCashOut
+        - cashOutFrequency
+      properties:
+        merchantID:
+          type: string
+          example: 4a17335e-bf18-11e8-a355-000000fb1459
+          format: uuid
+          description: ID provided to the merchant by PumaPay
+        title:
+          type: string
+          format: text
+          example: National Cryptographic Gold Mebmership
+          description: Title of the  payment model
+        description:
+          type: string
+          format: text
+          example: Access to all gold articles
+          description: Description of the  payment model
+        amount:
+          type: integer
+          example: 1099
+          format: cents
+          description: Cost of the payment in cents (1099 => 10.99)
+        initialPaymentAmount:
+          type: integer
+          example: 199
+          format: cents
+          description: Cost of the payment in cents (199 => 1.99) - Set to zero if no intial fees are required for the payment
+        trialPeriod:
+          type: integer
+          format: seconds
+          example: 86400
+          description: Trial period for the subscription in seconds (86400 => 1 day) - Set to zero if the payment has no trial period
+        currency:
+          type: string
+          example: USD
+          format: text
+          description: Currency the merchant is using specified in 3-letter abbriviation - USD, EUR, GBP etc
+        numberOfPayments:
+          type: integer
+          example: 12
+          format: integer
+          description: Number of payments that the merchant will be allowed to pull from the customer's wallet
+        typeID:
+          type: integer
+          enum: [push = 1, singlePull = 2, recurringPull = 3, recurringWithInitial = 4, recurringWithTrial = 5, recurringWithTrialAndInitial = 6]
+          example: 2
+          format: integer
+          description: Payment Type ID
+        frequency:
+          type: integer
+          example: 604800
+          format: seconds
+          description: How often the merchant will be able to pull funds from the customer's wallet (604800 => 1 week)
+        networkID:
+          type: integer
+          example: 3
+          format: integer
+          enum: [MainNet = 1, TestNet (Ropsten) = 3]
+          description: Ethereum network ID
+        automatedCashOut:
+          type: boolean
+          example: true
+          format: boolean
+          description: True if cash out is autometed, false if not
+        cashOutFrequency:
+          type: integer
+          example: 1
+          format: seconds
+          description: The cash out frequency
